# cpp-elgato-streamdeck

./: .clang-format  .gitignore  CMakeLists.txt  readme.md
API/: CMakeLists.txt  api.proto
API/include/StreamDeck/API/: api.grpc.pb.h  api.pb.h
API/source/: api.grpc.pb.cc  api.pb.cc
CLI/: CMakeLists.txt
CLI/source/: ArgParser.h  GRPCClient.cpp  GRPCClient.h  Mediator.h  main.cpp
DeviceEmulator/: CMakeLists.txt
DeviceEmulator/source/: Defines.h  MainWindow.cpp  MainWindow.h
DeviceEmulator/source/DeckWidgets/: OriginalV2Widget.h
DeviceEmulator/source/Transport/: MediatorInterface.h
ModuleSDK/: CMakeLists.txt
ModuleSDK/include/ModuleAPI/: ComponentSettings.h  IComponent.h  IDeviceButtonRestricted.h  IModule.h  Module.h  ProvidedProfile.h
Modules/: CMakeLists.txt
Modules/ALSA/: CMakeLists.txt  main.cpp
Modules/ALSA/images/: volume_down.h  volume_mute.h  volume_unmute.h  volume_up.h
Modules/Media/: CMakeLists.txt  GDbusMediaWrapper.cpp  GDbusMediaWrapper.h  main.cpp
Modules/Media/images/: image_next.h  image_next_gray.h  image_pause.h  image_play.h  image_prev.h  image_prev_gray.h
Modules/SampleConfigs/: CMakeLists.txt  main.cpp
Modules/VolumeMixer/: CMakeLists.txt  MixerButtonManager.cpp  MixerButtonManager.h  MixerComponent.cpp  MixerComponent.h  PulseSystem.cpp  PulseSystem.h  SwitcherComponent.cpp  SwitcherComponent.h  module.cpp  module.h
Modules/VolumeMixer/images/: back.h  default_app.h  forward.h  home.h  minus.h  mixer.h  plus.h
PoC/ModulesConcept/: CMakeLists.txt  main.cpp
PoC/ModulesConcept/SDK/: CMakeLists.txt  IModule.h  module.cpp
PoC/ModulesConcept/components/: CMakeLists.txt
PoC/ModulesConcept/components/comp1/: CMakeLists.txt  main.cpp
PoC/ModulesConcept/components/comp2/: CMakeLists.txt  comp1.cpp  main.cpp  module.cpp  module.h
Server/: CMakeLists.txt
Server/include/device/: DeviceManager.h  IDevice.h  ITransport.h  TransportFactory.h
Server/include/streamdeck/: IStreamDeck.h
Server/include/util/: LibUsbHidWrapper.h  SystemUtil.h
Server/source/: ConfigLoader.cpp  Engine.h  ModuleLoader.h  RegisteredDevice.cpp  RegisteredDevice.h  main.cpp
Server/source/core/: ConfigLoader.cpp  ConfigLoader.h  DeviceController.cpp  DeviceController.h  Engine.cpp  Engine.h  ModuleLoader.cpp  ModuleLoader.h  Profile.cpp  Profile.h  RegisteredDevice.cpp  RegisteredDevice.h  RestrictedDevice.cpp  RestrictedDevice.h  ServerGRPC.cpp  ServerGRPC.h  ServerRPC.cpp  ServerRPC.h
Server/source/device/: FakeDevice.cpp  FakeDevice.h  FakeTransport.cpp  FakeTransport.h  TransportFactory.cpp  UsbDevice.cpp  UsbDevice.h  UsbTransport.cpp  UsbTransport.h
Server/source/streamdeck/: BaseStreamDeck.cpp  BaseStreamDeck.h  DeviceManager.cpp  DeviceRegistrator.h  StreamDeckFactory.cpp  StreamDeckFactory.h  StreamDeckOriginalV2.cpp  StreamDeckOriginalV2.h
Server/source/util/: LibUsbHidWrapper.cpp  SystemUtil.cpp
StreamdeckLib/: CMakeLists.txt
StreamdeckLib/include/StreamDeckLib/: DeviceManager.h  ProductID.h
StreamdeckLib/include/StreamDeckLib/ImageHelper/: ImageHelper.h
StreamdeckLib/include/StreamDeckLib/Transport/: TransportFactory.h
StreamdeckLib/source/Devices/: BaseStreamDeck.h
StreamdeckLib/source/ImageHelper/: ImageHelper.cpp
StreamdeckLib/source/Transport/: FakeDevice.cpp  FakeTransport.h  LibUsbHidWrapper.h
UI/: CMakeLists.txt
UI/source/: StreamDeckClient.cpp
include/ModuleAPI/: ComponentParameters.h  IComponent.h  IDeviceButtonRestricted.h  IModule.h  Module.h
include/StreamDeckLib/Device/: IStreamDeck.h
include/StreamDeckLib/ImageHelper/: ImageHelper.h
include/StreamDeckLib/Transport/: ITransport.h  TransportFactory.h
src/: CMakeLists.txt  main.cpp
src/DeckEmulator/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  main.cpp
src/DeckEmulator/DeckWidgets/: OriginalV2Widget.cpp  OriginalV2Widget.h
src/DeckEmulator/Transport/: Mediator.h
src/StreamDeck/: CMakeLists.txt  DeviceManager.cpp  DeviceManager.h  ProductID.h
src/StreamDeck/Devices/: BaseDevice.cpp  BaseDevice.h  BaseStreamDeck.cpp  BaseStreamDeck.h  DeviceRegistrator.h  StreamDeckFactory.cpp  StreamDeckFactory.h  StreamDeckOriginalV2.cpp  StreamDeckOriginalV2.h
src/StreamDeck/ImageHelper/: ImageHelper.cpp  ImageHelper.h
src/StreamDeck/Transport/: FakeDevice.cpp  FakeDevice.h  FakeTransport.cpp  IDevice.h  ITransport.h  LibUsbHidWrapper.cpp  Transport.h  TransportFactory.cpp  UsbDevice.h  UsbTransport.cpp  UsbTransport.h
src/UI/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  StreamDeckClient.h  main.cpp
src/cli/: CMakeLists.txt  CallbackEngine.h  ConfigLoader.h  Engine.h  ModuleLoader.h  Profile.h  RegisteredDevice.h  main.cpp
src/modules/: CMakeLists.txt
src/modules/ALSA/: CMakeLists.txt  image_bytes.h  image_mute.h  image_unmute.h  main.cpp
src/modules/ALSA/images/: volume_up.h
src/modules/VolumeMixer/: CMakeLists.txt  MixerButtonManager.cpp  MixerButtonManager.h  MixerComponent.cpp  PulseSystem.cpp  PulseSystem.h  SwitcherComponent.cpp  SwitcherComponent.h  main.cpp  module.cpp  module.h
src/modules/VolumeMixer/images/: forward.h  home.h  images.h  mixer.h  plus.h
src/server/: CMakeLists.txt  ConfigLoader.cpp  ConfigLoader.h  Engine.cpp  Engine.h  ModuleLoader.h  Profile.cpp  Profile.h  RegisteredDevice.cpp  RegisteredDevice.h  RestrictedDevice.cpp  RestrictedDevice.h  main.cpp  util.cpp  util.h
